--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,19 @@
 services:
-  - type: web
-    name: ytbuddy
+  - name: ytbuddy1-server
+    type: web
     runtime: python
-    buildCommand: pip install -r server/requirements.txt
-    startCommand: python server/main.py
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
-      - key: YOUTUBE_API_KEY
-        fromGroup: env
-      - key: GEMINI_API_KEY
-        fromGroup: env
-      - key: FLASK_SECRET_KEY
-        fromGroup: env
-      - key: FLASK_ENV
-        value: production
+      - key: PORT
+        value: 10000
+      # Add other backend env vars here
+
+  - name: ytbuddy1-client
+    type: web
+    runtime: node
+    buildCommand: npm install && npm run build
+    staticPublishPath: ./build
+    envVars:
+      - key: REACT_APP_API_URL
+        value: https://ytbuddy1-backend.onrender.com
