--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,10 @@ services:
     runtime: python
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    healthCheckPath: /health
     envVars:
       - key: PORT
         value: 10000
-      # Add other backend env vars here
 
   - name: ytbuddy1-client
     type: web
@@ -15,5 +15,5 @@ services:
     buildCommand: npm install && npm run build
     staticPublishPath: ./build
     envVars:
-      - key: REACT_APP_API_URL
-        value: https://ytbuddy1-backend.onrender.com
+      - key: VITE_API_URL
+        value: https://ytbuddy1-server.onrender.com
