--- a/render.yaml
+++ b/render.yaml
@@ -19,8 +19,8 @@ services:
     type: web
     runtime: node
     buildCommand: npm install && npm run build
-    staticPublishPath: /dist
+    staticPublishPath: ./client/dist
     envVars:
       - key: VITE_API_URL
-        value: https://ytbuddy1-server.onrender.com
+        value: https://ytbuddy1.onrender.com
         
